# projects-rd-tools

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
dev/: test.py
docs/: conf.py  index.rst
rdtools/: clients.py  utils.py
src/projects_rd_tools/: __init__.py  skeleton.py
src/rdtools/: alissa.py  clients.py  logger.py  molgenis.py  utils.py
tests/: conftest.py  test_skeleton.py
