[bumpversion]
current_version = 0.1.2

[metadata]
name = rdtools
version = attr: rdtools.__version__
description = Tools for managing RD databases
author = davidruvolo51
author_email = davidruvolo51@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Intended Audience :: Science/Research

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
install_requires = 
	importlib-metadata; python_version<"3.8"
	molgenis-py-client >= 2.4.0
	pytz >= 2022.7.1
	datetime
	numpy >= 1.24.2
	tempfile
	requests_oauthlib
	oauthlib.oauth2

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov

[options.entry_points]

[tool:pytest]
addopts = 
	--cov rdtools --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.4
package = rdtools
